--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "next": "12.2.0",
+    "polished": "^4.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
