--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullstack2022",
+  "name": "page-speed",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
-    "polished": "^4.2.2",
+    "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
-    "styled-components": "^5.3.5"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4"
   }
 }
